<resources>
    <string name="app_name">ZXY calzado deportivo</string>
    <string name="sexo">Calzado para:</string>
    <string name="tipo">Tipo:</string>
    <string name="marca">Marca:</string>
    <string name="cantidad">Cantidad:</string>
    <string name="cotizacion">Cotizacion</string>

    <string name="mujer">Mujer</string>
    <string name="hombre">Hombre</string>
    
    <string-array name="sexo">
        <item>@string/hombre</item>
        <item>@string/mujer</item>
    </string-array>

    <string name="zapatilla">Zapatilla</string>
    <string name="clasico">Clasico</string>
    
    <string-array name="tipo">
        <item>@string/zapatilla</item>
        <item>@string/clasico</item>
    </string-array>

    <string name="nike">Nike</string>
    <string name="adida">Adida</string>
    <string name="puma">Puma</string>
    
    <string-array name="marca">
        <item>@string/nike</item>
        <item>@string/adida</item>
        <item>@string/puma</item>
    </string-array>

    <string name="precio">Precio</string>
    <string name="borrar">Borrar</string>

    <string name="error_vacio">Falto la cantidad</string>
    <string name="error_menor_cero">La cantidad no debe ser menor o igual a cero</string>
    
    
</resources>
